--- a/src/CodeRinseRepeat.Brightness/CodeRinseRepeat.Brightness.csproj
+++ b/src/CodeRinseRepeat.Brightness/CodeRinseRepeat.Brightness.csproj
@@ -14,4 +14,8 @@
     <RootNamespace>CodeRinseRepeat.Brightness</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
